--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Complete node js guide.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js",
+    "start-server": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/JaiiParmar/NodeProject01/issues"
   },
-  "homepage": "https://github.com/JaiiParmar/NodeProject01#readme"
+  "homepage": "https://github.com/JaiiParmar/NodeProject01#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.3"
+  },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
+  }
 }
