--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
-  "name": "udamynode",
+  "name": "nodejs-complete-guide",
   "version": "1.0.0",
-  "description": "Complete node js guide.",
+  "description": "Complete Node.js Guide",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
-    "start-server": "node app.js"
+    "start-server": " "
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JaiiParmar/NodeProject01.git"
-  },
-  "author": "jai parmar",
+  "author": "Maximilian Schwarzmüller",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JaiiParmar/NodeProject01/issues"
-  },
-  "homepage": "https://github.com/JaiiParmar/NodeProject01#readme",
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "nodemon": "^1.18.3"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
+    "connect-mongodb-session": "^2.0.3",
+    "csurf": "^1.9.0",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
+    "mongodb": "^3.1.6",
+    "mongoose": "^5.2.17",
+    "mysql2": "^1.6.1",
+    "pug": "^2.0.3",
+    "sequelize": "^5.0.0-beta.11"
   }
 }
